using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class UnitAnimationDefines
{
    public static readonly string Direction = "Direction";
    public static readonly string AnimState = "AnimState";
    public static readonly string StateRevertTrigger = "StateRevertTrigger";
    public static readonly string StateApplyTrigger = "StateApplyTrigger";
}